[package]
name = "cranelift-object"
version = "0.65.0"
authors = ["The Cranelift Project Developers"]
description = "Emit Cranelift output to native object files with `object`"
repository = "https://github.com/bytecodealliance/wasmtime"
documentation = "https://docs.rs/cranelift-object"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
cranelift-module = { path = "../module", version = "0.65.0" }
cranelift-codegen = { path = "../codegen", version = "0.65.0", default-features = false, features = ["std"] }
object = { version = "0.19", default-features = false, features = ["write"] }
gimli = { version = "0.21", default-features = false, features = ["write"], optional = true }
target-lexicon = "0.10"

[badges]
maintenance = { status = "experimental" }

[features]
unwind = ["gimli", "cranelift-codegen/unwind"]
